--- a/css/user.css
+++ b/css/user.css
@@ -1,227 +1,145 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-	padding: 0;
 	margin: 0;
+	padding: 0;
+	font-family: "Ubuntu", sans-serif;
 	box-sizing: border-box;
+	text-decoration: none;
 }
 
 body {
 	height: 100vh;
-	display: grid;
-	align-items: center;
-	font-family: "Poppins", sans-serif;
-}
-
-.contact-us {
-	padding-top: 8rem;
-	padding-bottom: 20px;
-}
-
-.contact-wrap {
-	width: 80%;
-	height: auto;
-	margin: auto;
+	background: #f8f8f8;
+	background-size: cover;
 	display: flex;
-	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
 }
 
-.contact-in {
-	padding: 30px 20px;
-}
-
-.contact-in p {
-	margin-left: 60px;
-}
-
-.contact-in:nth-child(1) {
-	flex: 30%;
-	background: url(../images/1.jpg);
-	color: #312d2c;
-}
-
-.contact-in:nth-child(2) {
-	/* flex: 45%; */
-	/* background: #c31432; */
-}
-
-.contact-in:nth-child(3) {
-	flex: 25%;
-	padding: 0;
-}
-
-.contact-in h1 {
-	font-size: 24px;
-	color: #312d2c;
-	text-transform: uppercase;
-	font-weight: 500;
-	margin-bottom: 20px;
-	border-bottom: 5px solid #413b3b;
-}
-
-.contact-in h2 {
-	font-size: 20px;
-	font-weight: 400;
-	margin-bottom: 15px;
-}
-
-.contact-in h2 i {
-	font-size: 16px;
-	width: 40px;
-	height: 40px;
-	margin-right: 10px;
-	background: #f5f5f5;
-	color: #312d2c;
-	border-radius: 50px;
-	line-height: 40px;
+.profile-card {
+	width: 400px;
 	text-align: center;
+	border-radius: 8px;
+	overflow: hidden;
 }
 
-.contact-in p {
-	font-size: 14px;
-	font-weight: 300;
-	margin-bottom: 20px;
+.card-header {
+	background: #413b3b;
+	padding: 60px 40px;
 }
 
-.contact-in ul {
-	padding: 0;
-	margin: 0;
-}
-
-.contact-in ul li {
-	list-style: none;
+.pic {
 	display: inline-block;
-	margin-right: 5px;
-	margin-top: 5px;
+	padding: 8px;
+	background: white;
+	margin: auto;
+	border-radius: 50%;
+	background-size: 200% 200%;
 }
 
-.contact-in ul li a {
+@keyframes animated-gradient {
+	25% {
+		background-position: left bottom;
+	}
+	50% {
+		background-position: right bottom;
+	}
+	75% {
+		background-position: right top;
+	}
+	100% {
+		background-position: left top;
+	}
+}
+
+.pic img {
 	display: block;
-	width: 30px;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
+
+.name {
+	color: #f2f2f2;
+	font-size: 28px;
+	font-weight: 600;
+	margin: 10px 0;
+}
+
+.desc {
+	font-size: 18px;
+	color: #e66767;
+}
+
+.sm {
+	display: flex;
+	justify-content: center;
+	margin: 20px 0;
+}
+
+.sm a {
+	color: #f2f2f2;
+	width: 56px;
+	font-size: 22px;
+	transition: 0.3s linear;
+}
+
+.sm a:hover {
+	color: #e66767;
+}
+
+.contact-btn {
+	display: inline-block;
+	padding: 12px 50px;
+	color: #e66767;
+	border: 2px solid #e66767;
+	border-radius: 6px;
+	margin-top: 16px;
+	transition: 0.3s linear;
+}
+
+.contact-btn:hover {
+	background: #e66767;
+	color: #f2f2f2;
+}
+
+.admin-btn {
+	display: inline-block;
+	padding: 12px 50px;
+	background-color: #413b3b;
+	color: white;
+	margin-top: 8px;
+	transition: 0.3s linear;
+}
+.admin-btn:hover {
+	background: white;
+	color: black;
+	border: 1px solid black;
+}
+.card-footer {
+	background: white;
+	padding: 60px 10px;
+}
+
+.numbers {
+	display: flex;
+	align-items: center;
+}
+
+.item {
+	flex: 1;
+	text-transform: uppercase;
+	font-size: 13px;
+	color: #e66767;
+}
+
+.item span {
+	display: block;
+	color: #2c3a47;
+	font-size: 30px;
+}
+
+.border {
+	width: 1px;
 	height: 30px;
-	text-align: center;
-	background: #312d2c;
-	border-radius: 50px;
-}
-
-.contact-in ul li a i {
-	font-size: 14px;
-	line-height: 30px;
-	color: #312d2c;
-}
-
-.contact-in form {
-	width: 100%;
-	height: auto;
-}
-
-.contact-in-input {
-	width: 100%;
-	height: 40px;
-	margin-bottom: 20px;
-	border: 1px solid #312d2c;
-	outline: none;
-	padding-left: 5px;
-	background: transparent;
-	color: #312d2c;
-	font-size: 12px;
-	font-weight: 300;
-	font-family: "Poppins", sans-serif;
-}
-
-.contact-in-input::placeholder {
-	color: #312d2c;
-}
-
-.contact-in-textarea {
-	width: 100%;
-	height: 140px;
-	margin-bottom: 20px;
-	border: 1px solid #312d2c;
-	outline: none;
-	padding-top: 5px;
-	padding-left: 5px;
-	background: transparent;
-	color: #312d2c;
-	font-size: 12px;
-	font-weight: 300;
-	font-family: "Poppins", sans-serif;
-	resize: none;
-}
-
-.contact-in-textarea::placeholder {
-	color: #312d2c;
-}
-
-.contact-in-btn {
-	width: 100%;
-	height: 40px;
-	/* border: 1px solid #312d2c; */
-	outline: none;
-	/* background: transparent; */
-	/* color: #312d2c; */
-	font-size: 12px;
-	font-weight: 300;
-	font-family: "Poppins", sans-serif;
-	cursor: pointer;
-	/* width: 100%; */
-	/* height: 40px; */
-	/* background-color: #221e1d; */
-	background-color: #413b3b;
-	/* border: none; */
-	border-radius: 3px;
-	color: #ffffff;
-	text-transform: uppercase;
-	margin-top: 10px;
-	font-size: 16px;
-	cursor: pointer;
-}
-
-.contact-in iframe {
-	width: 100%;
-	height: 100%;
-}
-
-input [type="submit"] {
-	/* width: 100%; */
-	/* height: 40px; */
-	/* background-color: #221e1d; */
-	background-color: #413b3b;
-	/* border: none; */
-	border-radius: 3px;
-	color: #ffffff;
-	text-transform: uppercase;
-	margin-top: 10px;
-	font-size: 16px;
-	cursor: pointer;
-}
-
-.contact-in-btn:hover {
-	border: 2px solid #413b3b;
-	font-weight: 500;
-	background: none;
-	color: #413b3b;
-}
-
-@media only screen and (max-width: 1000px) {
-	.contact-in:nth-child(1) {
-		flex: 50%;
-	}
-	.contact-in:nth-child(2) {
-		flex: 50%;
-	}
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
-}
-
-@media (max-width: 767px) {
-	.contact-in:nth-child(1) {
-		flex: 100%;
-	}
-	.contact-in:nth-child(2) {
-		flex: 100%;
-	}
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
+	background: #bbb;
 }
